Initial port to 1.21 and NeoForge